--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "test-store-vue2",
+  "homepage": "https://vladimirgromyko.github.io/test-store-vue2/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vitejs/plugin-vue2": "^2.3.1",
     "element-ui": "^2.15.14",
+    "gh-pages": "^6.1.0",
     "vite-plugin-vue2-svg": "^0.4.0",
     "vue": "^2.7.15",
     "vuex": "^3.6.2"
